--- a/Test1/index.html
+++ b/Test1/index.html
@@ -3,11 +3,10 @@
 	<head>
 		<title>Rubik's Cube</title>
 		<script src="lib/webgl-obj-loader.min.js"></script>
-			<script src="lib/utils.js"></script>
+		<script src="lib/utils.js"></script>	
+		<script src="lib/quaternion.min.js"></script>
+		<script src="lib/Rotation.js"></script>
 		<script src="lib/app.js"></script>
-		<script src="lib/utils.js"></script>
-
-
 	</head>
 
 	<body style="background-color: darkslategray;" onLoad="main();">
