--- a/Rubik_With_TwglLibrary/index.html
+++ b/Rubik_With_TwglLibrary/index.html
@@ -1,16 +1,12 @@
-
-
 <!doctype html>
 <html>
 	<head>
 		<title>Rubik's Cube</title>
-		  <script src="lib/twgl-full.min.js"></script>
 		<script src="lib/webgl-obj-loader.min.js"></script>
-			<script src="lib/utils.js"></script>
-		<script src="lib/app.js"></script>
 		<script src="lib/utils.js"></script>
-
-
+		<script src="lib/quaternion.min.js"></script>
+		<script src="lib/twgl-full.min.js"></script>
+		<script src="lib/app.js"></script>
 	</head>
 
 	<body style="background-color: darkslategray;" onLoad="main();">
@@ -20,33 +16,34 @@
 		</canvas>
 		</center>
 	</body>
-	<script id="one-point-vs" type="notjs">
-uniform mat4 u_worldViewProjection;
+	<script id="vs" type="notjs">
+		uniform mat4 u_worldViewProjection;
 
-attribute vec4 a_position;
-attribute vec2 a_texcoord;
+		attribute vec4 a_position;
+		attribute vec2 a_texcoord;
 
-varying vec4 v_position;
-varying vec2 v_texCoord;
+		varying vec4 v_position;
+		varying vec2 v_texCoord;
 
-void main() {
-  v_texCoord = a_texcoord;
-  gl_Position = u_worldViewProjection * a_position;
-}
-  </script>
-  <script id="one-point-fs" type="notjs">
-precision mediump float;
+		void main() {
+		v_texCoord = a_texcoord;
+		gl_Position = u_worldViewProjection * a_position;
+		}
+	</script>
 
-varying vec4 v_position;
-varying vec2 v_texCoord;
+	<script id="fs" type="notjs">
+		precision mediump float;
 
-//uniform vec4 u_diffuseMult;
-uniform sampler2D u_diffuse;
+		varying vec4 v_position;
+		varying vec2 v_texCoord;
 
-void main() {
-//  vec4 diffuseColor = //* u_diffuseMult;
+		//uniform vec4 u_diffuseMult;
+		uniform sampler2D u_diffuse;
 
-  gl_FragColor = texture2D(u_diffuse, v_texCoord) ;;
-}
-  </script>
+		void main() {
+		//  vec4 diffuseColor = //* u_diffuseMult;
+
+		gl_FragColor = texture2D(u_diffuse, v_texCoord) ;;
+		}
+	</script>
 </html>
